@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 14-06-2005 changed: build.bat now RAR's weather gfx and puts it in media/ folder (required for gfx to show)
  - 14-06-2005 fixed: rar code had problems with multiple volumes.
  - 14-06-2005 updated: mplayer.dll (fixes crash with noise filter)
  - 14-06-2005 changed: weather pictures can be in a rar as well.
